add_subdirectory(asio)
add_subdirectory(fastcgi)
add_subdirectory(filetransfer)
add_subdirectory(hub)
add_subdirectory(idleconnection)
add_subdirectory(maxconnection)
add_subdirectory(memcached)
add_subdirectory(multiplexer)
add_subdirectory(netty)
add_subdirectory(pingpong)

if(PROTOBUF_FOUND)
    add_subdirectory(protobuf)
else()
    add_subdirectory(protobuf EXCLUDE_FROM_ALL)
endif()

add_subdirectory(roundtrip)
add_subdirectory(shorturl)
add_subdirectory(simple)
add_subdirectory(twisted)
add_subdirectory(wordcount)
add_subdirectory(zeromq)
