add_subdirectory(ace)
add_subdirectory(asio)

if(CARES_INCLUDE_DIR AND CARES_LIBRARY)
    add_subdirectory(cdns)
else()
    add_subdirectory(cdns EXCLUDE_FROM_ALL)
endif()

if(CURL_FOUND)
    add_subdirectory(curl)
else()
    add_subdirectory(curl EXCLUDE_FROM_ALL)
endif()

add_subdirectory(fastcgi)
add_subdirectory(filetransfer)

if(HIREDIS_INCLUDE_DIR AND HIREDIS_LIBRARY)
    add_subdirectory(hiredis)
else()
    add_subdirectory(hiredis EXCLUDE_FROM_ALL)
endif()

add_subdirectory(hub)
add_subdirectory(idleconnection)
add_subdirectory(maxconnection)
add_subdirectory(memcached)
add_subdirectory(multiplexer)
add_subdirectory(netty)
add_subdirectory(pingpong)

if(GD_INCLUDE_DIR AND GD_LIBRARY)
    add_subdirectory(procmon)
else()
    add_subdirectory(procmon EXCLUDE_FROM_ALL)
endif()

if(PROTOBUF_FOUND)
    add_subdirectory(protobuf)
else()
    add_subdirectory(protobuf EXCLUDE_FROM_ALL)
endif()

add_subdirectory(roundtrip)
add_subdirectory(shorturl)
add_subdirectory(simple)
add_subdirectory(socks4a)
add_subdirectory(twisted)
add_subdirectory(wordcount)
add_subdirectory(zeromq)
